// Using gluon to build a native image
/*
prerequisites:

1. make one tiny changes in the source, edit Launcher.java and set:

public static final boolean no_gluon = false;

2. compile the icon taskbar lib:

clang -dynamiclib -fobjc-arc -framework Cocoa -I "$JAVA_HOME/include" -I "$JAVA_HOME/include/darwin" -o libmacdock.dylib src/main/native/macos/macdock.m

check the name:
nm -gU libmacdock.dylib
and it should contain the following symbols:
0000000000000710 T _Java_klik_look_Macdock_setup

note that this trick does not fully solve the issue of the icon in the dock;
it works when you launch from the top default repo folder,
which is stupid if you want to distribute the binary standalone
TODO: tweaking this file some more it should be possible to set the icon
into the executable itself....

3. for drag and drop to work edit the file:

src/main/resources/META-INF/native-image/reflect-config.json

add this:

[
  { "name": "javafx.scene.input.Dragboard", "allDeclaredMethods": true, "allDeclaredFields": true },
  { "name": "javafx.scene.input.Clipboard", "allDeclaredMethods": true, "allDeclaredFields": true },
  { "name": "javafx.scene.input.ClipboardContent", "allDeclaredMethods": true, "allDeclaredFields": true },

  { "name": "com.sun.javafx.tk.TKClipboard", "allDeclaredMethods": true, "allDeclaredFields": true },
  { "name": "com.sun.javafx.tk.quantum.QuantumClipboard", "allDeclaredMethods": true, "allDeclaredFields": true },
  { "name": "com.sun.javafx.tk.quantum.QuantumClipboard$MimeType", "allDeclaredMethods": true, "allDeclaredFields": true },

  { "name": "com.sun.glass.ui.Clipboard", "allDeclaredMethods": true, "allDeclaredFields": true },
  { "name": "com.sun.glass.ui.ClipboardAssistance", "allDeclaredMethods": true, "allDeclaredFields": true },
  { "name": "com.sun.glass.ui.SystemClipboard", "allDeclaredMethods": true, "allDeclaredFields": true },

  { "name": "com.sun.glass.ui.mac.MacClipboard", "allDeclaredMethods": true, "allDeclaredFields": true },
  { "name": "com.sun.glass.ui.mac.MacSystemClipboard", "allDeclaredMethods": true, "allDeclaredFields": true }
]



3. download & install the gluon package (which is based on graalvm)
for this: download the gluon package
unzip it and on MAC, dont forget to remove the quarantine attribute:
sudo xattr -r -d com.apple.quarantine /Users/philippegentric/Library/Java/JavaVirtualMachines/graalvm-java23-darwin-aarch64-gluon-23+25.1-dev

set GRAALVM_HOME to the path of the graalvm from the gluon package:

export GRAALVM_HOME=/Users/philippegentric/Library/Java/JavaVirtualMachines/graalvm-java23-darwin-aarch64-gluon-23+25.1-dev/Contents/Home
echo $GRAALVM_HOME
export PATH=$GRAALVM_HOME/bin:$PATH
echo $PATH
gradle clean nativeBuild
gradle nativeRun

*/

plugins {
       id 'java'
       id 'application'
       id 'org.openjfx.javafxplugin' version '0.1.0'
       id 'com.gradleup.shadow' version '9.0.1'
       id 'com.gluonhq.gluonfx-gradle-plugin' version '1.0.27'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(23)
    }
}

 javafx {
     version = "23.0.2"
     modules = [ 'javafx.base', 'javafx.graphics', 'javafx.controls', 'javafx.fxml', 'javafx.media','javafx.web' ]
 }

 repositories {
     mavenCentral()
 }

 application {
     mainClass = "klik.Klik_application"
 }

compileJava {
    options.compilerArgs.add('--enable-preview')
}


repositories {
    mavenCentral()
}


dependencies {
    // EXIF reader
    implementation 'com.drewnoakes:metadata-extractor:2.19.0'
    // Cache
    implementation group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: '3.2.2'
    // moving folders across different drives
    implementation group: 'commons-io', name: 'commons-io', version: '2.19.0'
    // for face recognition: gson is used to serialise the feature vectors between the python server and this app
    implementation 'com.google.code.gson:gson:2.13.1'
    // for writing png files without AWT
    implementation 'ar.com.hjg:pngj:2.1.0'

    implementation("org.openjfx:javafx-fxml:23.0.2")
    implementation("org.openjfx:javafx-base:23.0.2")
    implementation("org.openjfx:javafx-graphics:23.0.2")
    implementation("org.openjfx:javafx-controls:23.0.2")
    implementation("org.openjfx:javafx-media:23.0.2")
    implementation("org.openjfx:javafx-web:23.0.2")
}


shadowJar {
    archiveFileName.set("klik.jar")
    manifest {
        attributes(
                'Main-Class': 'klik.Klik_application',
                'JavaFX-Modules': ['javafx.base','javafx.graphics','javafx.controls','javafx.fxml', 'javafx.media', 'javafx.web']
        )
    }
    mergeServiceFiles()
}


run{
    standardInput = System.in
    classpath = sourceSets.main.runtimeClasspath
    jvmArgs = ['--enable-preview']
}

gluonfx {
 target = "$target"
 bundlesList =  ['javafx.base','javafx.graphics','javafx.controls','javafx.fxml','javafx.media', 'javafx.web']
 resourcesList = ['.*\\\\.properties$']
 //reflectionList = (reflectionList ?: []) + ['native-image/dragdrop/reflection-config.json']
}

task copyDyLib(type: Copy) {
         from file("${projectDir}/libmacdock.dylib")
         into "${buildDir}/libs"
     }

build.dependsOn(copyDyLib)


// TODO: make this work
jar {
   manifest {
      attributes('Main-Class': 'your.package.MainClass')
   }
   from("${buildDir}/libs") {
         include 'macdock.dylib'
   }
}